--- a/web/src/components/App/styles.scss
+++ b/web/src/components/App/styles.scss
@@ -1,11 +1,23 @@
 @import '../../css/variables/variables.scss';
 
 .app {
-  min-height: 100vh;
+  background-color: $gray-lightest;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 
   .app-page {
     display: flex;
-    flex: 1;
-    height: calc(100vh - 50px);
+    flex-direction: row;
+    height: 100%;
+
+    .app-nav {
+      background-color: $white;
+      min-width: 200px;
+    }
+
+    .app-main {
+      flex: 1 1 auto;
+    }
   }
 }
